kubernetes/apps/adventurelog/adventurelog-app/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-backend
spec:
  selector:
    app: adventurelog-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-frontend
spec:
  selector:
    app: adventurelog-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
