kubernetes/apps/adventurelog/adventurelog-app/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog-frontend
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "explore.axelfrache.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: adventurelog-backend
          port: 8000
    - backendRefs:
        - name: adventurelog-frontend
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog-api
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "explore-api.axelfrache.com"
  rules:
    - backendRefs:
        - name: adventurelog-backend
          port: 8000
